--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
         </div>
         <p class="hero-subtitle" data-i18n="hero.subtitle">Sound Beyond Gravity</p>
         <p class="hero-description" data-i18n="hero.description">
-          Entdecke Musik, die Grenzen überschreitet. 9Planets bringt dir innovative Klänge aus den Tiefen des Universums direkt in dein Herz.
+          Musik für offene Räume und innere Reisen.<br>
+          9Planets verbindet elektronische Klänge zu einer eigenen Erzählung.
         </p>
         <div class="hero-buttons">
-          <button class="btn-primary" data-i18n="hero.listen">Musik hören</button>
-          <button class="btn-secondary" data-i18n="hero.discover">Entdecken</button>
+          <a href="#releases" class="btn-primary" data-i18n="hero.listen">Musik hören</a>
+          <a href="https://music.apple.com/de/artist/sir-aaron-dawn/1632434815" target="_blank" class="btn-secondary" data-i18n="hero.discover">Entdecken</a>
         </div>
       </div>
     </section>
@@ -65,24 +66,21 @@
           <div class="about-content">
             <div class="about-text">
               <p data-i18n="about.mission">
-                9Planets versteht Musik als universelle Sprache, die Welten verbindet. Wir sind eine Plattform für experimentelle und emotionale Klangwelten, die Grenzen überschreiten.
-              </p>
-              <p data-i18n="about.vision">
-                Unsere Vision ist es, Künstlern einen Raum zu geben, in dem Kreativität, Innovation und Authentizität im Mittelpunkt stehen.
+                Für uns ist Musik eine universelle Sprache, die verbindet. Wir veröffentlichen elektronische Musik, die offen ist für das Emotionale, das Experimentelle, das Unerwartete. Dabei liegt unser Fokus auf Sounds, die sich entfalten dürfen – jenseits von Formeln, nah am klanglichen Ausdruck.
               </p>
             </div>
             <div class="about-stats glass-panel">
               <div class="stat">
-                <span class="stat-number">1</span>
-                <span class="stat-label" data-i18n="about.artist">Künstler</span>
+                <span class="stat-number">Experimentell</span>
+                <span class="stat-label" data-i18n="about.experimental">Ansatz</span>
               </div>
               <div class="stat">
-                <span class="stat-number">Coming</span>
-                <span class="stat-label" data-i18n="about.releases">Soon</span>
+                <span class="stat-number">Emotional</span>
+                <span class="stat-label" data-i18n="about.emotional">Fokus</span>
               </div>
               <div class="stat">
-                <span class="stat-number">9</span>
-                <span class="stat-label" data-i18n="about.planets">Planeten</span>
+                <span class="stat-number">Authentisch</span>
+                <span class="stat-label" data-i18n="about.authentic">Ausdruck</span>
               </div>
             </div>
           </div>
@@ -114,50 +112,47 @@
       <div class="container">
         <h2 class="section-title" data-i18n="releases.title">Releases</h2>
         <div class="releases-grid">
-          <!-- Release Card 1 -->
-          <div class="release-card glass-panel">
+          <!-- Release Card 1 - EPs -->
+          <a href="https://music.apple.com/de/artist/sir-aaron-dawn/1632434815" target="_blank" class="release-card glass-panel">
             <div class="release-cover">
-              <div class="release-placeholder">🚀</div>
+              <div class="release-placeholder">🎵</div>
               <div class="play-overlay">
                 <button class="play-btn">▶</button>
               </div>
             </div>
             <div class="release-info">
-              <h3>Coming Soon</h3>
-              <p>9Planets</p>
-              <p class="release-date">2025</p>
+              <h3>EP's</h3>
+              <p>Published by 9Planets</p>
             </div>
-          </div>
+          </a>
 
-          <!-- Release Card 2 -->
-          <div class="release-card glass-panel">
+          <!-- Release Card 2 - Alben -->
+          <a href="https://open.spotify.com/intl-de/artist/0vSZ3syFRnoT0i3jpGKXjX" target="_blank" class="release-card glass-panel">
             <div class="release-cover">
-              <div class="release-placeholder">🌌</div>
+              <div class="release-placeholder">💿</div>
               <div class="play-overlay">
                 <button class="play-btn">▶</button>
               </div>
             </div>
             <div class="release-info">
-              <h3>Coming Soon</h3>
-              <p>9Planets</p>
-              <p class="release-date">2025</p>
+              <h3>Alben</h3>
+              <p>Published by 9Planets</p>
             </div>
-          </div>
+          </a>
 
-          <!-- Release Card 3 -->
-          <div class="release-card glass-panel">
+          <!-- Release Card 3 - Continued Mixes -->
+          <a href="https://music.apple.com/de/artist/sir-aaron-dawn/1632434815" target="_blank" class="release-card glass-panel">
             <div class="release-cover">
-              <div class="release-placeholder">🪐</div>
+              <div class="release-placeholder">🎛️</div>
               <div class="play-overlay">
                 <button class="play-btn">▶</button>
               </div>
             </div>
             <div class="release-info">
-              <h3>Coming Soon</h3>
-              <p>9Planets</p>
-              <p class="release-date">2025</p>
+              <h3>Continued Mixes</h3>
+              <p>Published by 9Planets</p>
             </div>
-          </div>
+          </a>
         </div>
       </div>
     </section>
@@ -171,7 +166,7 @@
             <div class="contact-info">
               <h3 data-i18n="contact.getInTouch">Kontakt aufnehmen</h3>
               <p data-i18n="contact.description">
-                Hast du Fragen oder möchtest du mit mir kollaborieren?
+                Hast Du Fragen oder Interesse an einer Zusammenarbeit?
               </p>
               <div class="contact-links">
                 <a href="mailto:info@9planets.com" class="contact-link">
@@ -210,8 +205,8 @@
             <span>9Planets - Sound Beyond Gravity</span>
           </div>
           <div class="footer-links">
-            <a href="#" data-i18n="footer.imprint">Impressum</a>
-            <a href="#" data-i18n="footer.privacy">Datenschutz</a>
+            <a href="#impressum" data-i18n="footer.imprint">Impressum</a>
+            <a href="#datenschutz" data-i18n="footer.privacy">Datenschutz</a>
           </div>
         </div>
         <p class="footer-copyright">
