--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
       <div class="container">
         <h2 class="section-title" data-i18n="releases.title">Releases</h2>
         <div class="releases-grid">
-          <!-- Release Card 1 - EPs -->
-          <a href="https://music.apple.com/de/artist/sir-aaron-dawn/1632434815" target="_blank" class="release-card glass-panel">
+          <!-- Release Card 1 - EPs zu Apple Music Singles -->
+          <a href="https://music.apple.com/de/artist/sir-aaron-dawn/1632434815?see-all=singles" target="_blank" class="release-card glass-panel">
             <div class="release-cover">
               <div class="release-placeholder">🎵</div>
               <div class="play-overlay">
@@ -126,8 +126,8 @@
             </div>
           </a>
 
-          <!-- Release Card 2 - Alben -->
-          <a href="https://open.spotify.com/intl-de/artist/0vSZ3syFRnoT0i3jpGKXjX" target="_blank" class="release-card glass-panel">
+          <!-- Release Card 2 - Alben zu Apple Music Alben -->
+          <a href="https://music.apple.com/de/artist/sir-aaron-dawn/1632434815?see-all=albums" target="_blank" class="release-card glass-panel">
             <div class="release-cover">
               <div class="release-placeholder">💿</div>
               <div class="play-overlay">
@@ -140,8 +140,8 @@
             </div>
           </a>
 
-          <!-- Release Card 3 - Continued Mixes -->
-          <a href="https://music.apple.com/de/artist/sir-aaron-dawn/1632434815" target="_blank" class="release-card glass-panel">
+          <!-- Release Card 3 - Continued Mixes zu Spotify -->
+          <a href="https://open.spotify.com/intl-de/artist/0vSZ3syFRnoT0i3jpGKXjX" target="_blank" class="release-card glass-panel">
             <div class="release-cover">
               <div class="release-placeholder">🎛️</div>
               <div class="play-overlay">
