Fixed title styling and added working social media links

--- a/index.html
+++ b/index.html
@@ -172,16 +172,13 @@
                 <a href="mailto:info@9planets.com" class="contact-link">
                   📧 info@9planets.com
                 </a>
-                <a href="#" class="contact-link">
-                  📱 Instagram
-                </a>
-                <a href="#" class="contact-link">
+                <a href="https://soundcloud.com/aaron-dawn" target="_blank" class="contact-link">
                   🎵 SoundCloud
                 </a>
-                <a href="#" class="contact-link">
+                <a href="https://open.spotify.com/intl-de/artist/0vSZ3syFRnoT0i3jpGKXjX" target="_blank" class="contact-link">
                   🎧 Spotify
                 </a>
-                <a href="#" class="contact-link">
+                <a href="https://music.apple.com/de/artist/sir-aaron-dawn/1632434815" target="_blank" class="contact-link">
                   🍎 Apple Music
                 </a>
               </div>
