Added impressum page with matching design

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="hero-logo-container">
           <img src="/src/assets/images/logo.png" alt="9Planets Logo" class="hero-logo">
         </div>
-        <p class="hero-subtitle" data-i18n="hero.subtitle">Sound Beyond Gravity</p>
+        <p class="hero-subtitle" data-i18n="hero.subtitle" style="color: white !important; text-transform: uppercase !important; font-weight: 600 !important; letter-spacing: 2px !important;">SOUND BEYOND GRAVITY</p>
         <p class="hero-description" data-i18n="hero.description">
           Musik für offene Räume und innere Reisen.<br>
           9Planets verbindet elektronische Klänge zu einer eigenen Erzählung.
