--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
             <span>9Planets - Sound Beyond Gravity</span>
           </div>
           <div class="footer-links">
-            <a href="#impressum" data-i18n="footer.imprint">Impressum</a>
-            <a href="#datenschutz" data-i18n="footer.privacy">Datenschutz</a>
+            <a href="impressum.html" data-i18n="footer.imprint">Impressum</a>
+            <a href="datenschutz.html" data-i18n="footer.privacy">Datenschutz</a>
           </div>
         </div>
         <p class="footer-copyright">
