Updated impressum and added datenschutz page

--- a/impressum.html
+++ b/impressum.html
@@ -39,30 +39,23 @@
           <p class="impressum-date">(Stand: 19.09.2025)</p>
 
           <div class="impressum-block">
-            <h2>Anbieter und Verantwortlicher</h2>
-            <p><strong>9Planets – Independent Music Label</strong></p>
-            <p>Rechtsform: Einzelunternehmen</p>
-            <p>Vertretungsberechtigt: Michael H. Boehm (Inhaber)</p>
+            <h2>Anbieter und Verantwortlicher (§ 5 DDG)</h2>
+            <p><strong>Michael H. Boehm</strong>, tätig als freischaffender Künstler (Freiberufler)</p>
+            <p>auftretend unter: „9Planets – Independent Music Label" (Marke/Projekt)</p>
             <p>Im Vogelgesang 43<br>
             67346 Speyer<br>
             Deutschland</p>
-          </div>
-
-          <div class="impressum-block">
-            <h2>Kontakt</h2>
-            <p><strong>Telefon:</strong> 0175-5224020</p>
             <p><strong>E-Mail:</strong> <a href="mailto:mboehm63@gmail.com" class="impressum-link">mboehm63@gmail.com</a></p>
           </div>
 
           <div class="impressum-block">
-            <h2>Verbraucherstreitbeilegung</h2>
-            <p>(§ 36 VSBG, falls B2C-Verträge)</p>
+            <h2>Verbraucherstreitbeilegung (§ 36 VSBG)</h2>
             <p>Wir sind nicht bereit und nicht verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.</p>
           </div>
 
           <div class="impressum-block">
-            <h2>Optionale Angaben</h2>
-            <p><strong>Labelcode (GVL):</strong> LC 103453</p>
+            <h2>GVL-Labelcode</h2>
+            <p><strong>LC 103453</strong></p>
           </div>
 
           <div class="impressum-back">
