Text korrigiert - BR Tag entfernt

--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
         </div>
         <p class="hero-subtitle" data-i18n="hero.subtitle" style="color: white !important; text-transform: uppercase !important; font-weight: 600 !important; letter-spacing: 2px !important;">SOUND BEYOND GRAVITY</p>
         <p class="hero-description" data-i18n="hero.description">
-          Musik für offene Räume und innere Reisen.<br>
-          9Planets verbindet elektronische Klänge zu einer eigenen Erzählung.
+          Musik für offene Räume und innere Reisen. 9Planets verbindet elektronische Klänge zu einer eigenen Erzählung.
         </p>
         <div class="hero-buttons">
           <a href="#releases" class="btn-primary" data-i18n="hero.listen">Musik hören</a>
