--- a/impressum.html
+++ b/impressum.html
@@ -131,7 +131,7 @@
     }
 
     .impressum-block h2 {
-      color: #6366f1;
+      color: rgba(255, 255, 255, 0.95);
       font-size: 1.4rem;
       font-weight: 600;
       margin-bottom: 1rem;
