--- a/datenschutz.html
+++ b/datenschutz.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Datenschutz - 9Planets</title>
-  <meta name="description" content="Datenschutzerklärung von 9Planets Music Label - Informationen zur Datenverarbeitung">
+  <title>Datenschutzerklärung - 9Planets</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -23,105 +22,116 @@
     <nav class="glass-nav">
       <div class="nav-container">
         <div class="logo">
-          <!-- Logo entfernt aus Navigation -->
+          <a href="/">9Planets</a>
         </div>
         <ul class="nav-menu">
-          <li><a href="/">← Zurück zur Hauptseite</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/#about">Über uns</a></li>
+          <li><a href="/#artists">Künstler</a></li>
+          <li><a href="/#releases">Releases</a></li>
+          <li><a href="/#contact">Kontakt</a></li>
         </ul>
       </div>
     </nav>
 
-    <!-- Datenschutz Section -->
-    <section class="datenschutz-section">
+    <!-- Main Content -->
+    <main class="legal-page">
       <div class="container">
-        <div class="glass-panel datenschutz-content">
-          <h1 class="datenschutz-title">DATENSCHUTZERKLÄRUNG</h1>
-          <p class="datenschutz-date">(Stand: 19.09.2025)</p>
-
-          <div class="datenschutz-block">
+        <div class="glass-panel">
+          <h1>Datenschutzerklärung</h1>
+          <p class="legal-date">(Stand: 19.09.2025)</p>
+          
+          <section class="legal-section">
             <h2>1. Verantwortlicher</h2>
-            <p><strong>9Planets – Independent Music Label</strong></p>
-            <p>freischaffender Künstler (Freiberufler)</p>
-            <p>Vertretungsberechtigt: Michael H. Boehm</p>
-            <p>Im Vogelgesang 43, 67346 Speyer, Deutschland</p>
-            <p><strong>E-Mail:</strong> <a href="mailto:mboehm63@gmail.com" class="datenschutz-link">mboehm63@gmail.com</a> (Art. 13 DSGVO)</p>
-          </div>
+            <p>
+              Verantwortlicher für die Datenverarbeitung auf dieser Website ist:<br><br>
+              Michael H. Boehm<br>
+              9Planets – Independent Music Label<br>
+              Im Vogelgesang 43<br>
+              67346 Speyer, Deutschland<br>
+              E-Mail: <a href="mailto:mboehm63@gmail.com">mboehm63@gmail.com</a>
+            </p>
+          </section>
 
-          <div class="datenschutz-block">
-            <h2>2. Zwecke, Datenkategorien, Rechtsgrundlagen (Kurzüberblick)</h2>
-            <p><strong>Webseitenbetrieb & Sicherheit</strong> (Server-Logs: IP-Adresse, Zeitstempel, URL, Referrer, User-Agent) → Art. 6 Abs. 1 f DSGVO (berechtigtes Interesse an stabiler, sicherer Bereitstellung).</p>
-            <p><strong>Kommunikation</strong> (E-Mails/Formulare: Absenderdaten, Inhalte) → Art. 6 Abs. 1 b DSGVO (Vertrag/Anbahnung) oder Art. 6 Abs. 1 f DSGVO.</p>
-            <p><strong>Einwilligungspflichtige Technologien</strong> (z. B. Analytics, Marketing-Tags, Medien-Embeds) → § 25 Abs. 1 TDDDG (Zugriff/Speicherung auf dem Endgerät) + Art. 6 Abs. 1 a DSGVO (Verarbeitung).</p>
-            <p><strong>Technisch notwendige Cookies</strong> → § 25 Abs. 2 TDDDG (keine Einwilligung erforderlich).</p>
-          </div>
+          <section class="legal-section">
+            <h2>2. Allgemeine Hinweise und Pflichtinformationen</h2>
+            <h3>Datenschutz</h3>
+            <p>
+              Die Betreiber dieser Seiten nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Wir behandeln Ihre personenbezogenen Daten vertraulich und entsprechend den gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung.
+            </p>
+            <p>
+              Wenn Sie diese Website benutzen, werden verschiedene personenbezogene Daten erhoben. Personenbezogene Daten sind Daten, mit denen Sie persönlich identifiziert werden können. Die vorliegende Datenschutzerklärung erläutert, welche Daten wir erheben und wofür wir sie nutzen.
+            </p>
+          </section>
 
-          <div class="datenschutz-block">
-            <h2>3. Hosting / Content Delivery</h2>
-            <p>Wir hosten diese Website bei Netlify. Beim Aufruf fallen Verbindungsdaten (s. o.) an, die zur Abwehr von Angriffen und zur Sicherstellung des Betriebs kurzfristig in Logfiles gespeichert werden → Art. 6 Abs. 1 f DSGVO.</p>
-            <p><strong>Drittlandübermittlung:</strong> Bei Anbietern außerhalb der EU/EWR erfolgt die Übermittlung auf Basis eines Angemessenheitsbeschlusses (z. B. EU-US Data Privacy Framework) oder Standardvertragsklauseln (SCCs), sofern kein DPF-Beitritt besteht.</p>
-            <p>(EU-US-DPF Angemessenheit 10.07.2023; durch das EuG am 03.09.2025 bestätigt.)</p>
-          </div>
-
-          <div class="datenschutz-block">
-            <h2>4. Einwilligungen / Consent-Management</h2>
-            <p>Nicht-essentielle Dienste laden wir erst nach deiner Einwilligung. Du kannst deine Entscheidung jederzeit in den Privatsphäre-Einstellungen widerrufen.</p>
-            <p><strong>Rechtsgrundlagen:</strong> § 25 TDDDG (Endgerät) und Art. 6 Abs. 1 a DSGVO (Verarbeitung).</p>
-            <p>Unser Consent-Tool speichert deine Auswahl (Kategorien, Zeitstempel, Tool-Version) für 24 Monate in einem technisch notwendigen Cookie bzw. Local-Storage-Eintrag, damit wir deine Präferenz respektieren und dich nicht bei jedem Besuch erneut fragen.</p>
-          </div>
-
-          <div class="datenschutz-block">
-            <h2>5. Kontaktaufnahme</h2>
-            <p>Bei Kontakt per E-Mail/Formular verarbeiten wir die Angaben zur Bearbeitung und Anschlussfragen. Löschung mit Erledigung, sofern keine Aufbewahrungspflichten entgegenstehen → Art. 6 Abs. 1 b/f DSGVO.</p>
-          </div>
-
-          <div class="datenschutz-block">
-            <h2>6. Eingebettete Inhalte (YouTube/Spotify/SoundCloud/Bandcamp)</h2>
-            <p>Zum Schutz deiner Daten nutzen wir eine 2-Klick-Lösung. Erst nach aktiver Freigabe werden Inhalte geladen; dabei können Anbieter Cookies/IDs setzen und personenbezogene Daten (inkl. IP-Adresse) verarbeiten → § 25 TDDDG / Art. 6 Abs. 1 a DSGVO.</p>
-            <p>Widerruf jederzeit über die Privatsphäre-Einstellungen.</p>
-          </div>
-
-          <div class="datenschutz-block">
-            <h2>7. Schriftarten (Fonts)</h2>
-            <p>Schriften werden lokal eingebunden. Es findet kein Abruf von Drittservern (z. B. Google) statt.</p>
-          </div>
-
-          <div class="datenschutz-block">
-            <h2>8. Speicherdauer</h2>
-            <p>Wir löschen personenbezogene Daten, sobald der Zweck entfällt und keine gesetzlichen Pflichten entgegenstehen. Typische Fristen:</p>
-            <ul class="datenschutz-list">
-              <li>Server-Logs: 7–14 Tage (Sicherheitszwecke)</li>
-              <li>Kontaktanfragen: 6–12 Monate</li>
-              <li>Einwilligungsprotokolle: 24 Monate (Nachweis der Einwilligung)</li>
+          <section class="legal-section">
+            <h2>3. Datenerfassung auf dieser Website</h2>
+            <h3>Server-Log-Dateien</h3>
+            <p>
+              Der Provider der Seiten erhebt und speichert automatisch Informationen in so genannten Server-Log-Dateien, die Ihr Browser automatisch an uns übermittelt. Dies sind:
+            </p>
+            <ul>
+              <li>Browsertyp und Browserversion</li>
+              <li>verwendetes Betriebssystem</li>
+              <li>Referrer URL</li>
+              <li>Hostname des zugreifenden Rechners</li>
+              <li>Uhrzeit der Serveranfrage</li>
+              <li>IP-Adresse</li>
             </ul>
-          </div>
+            <p>
+              Eine Zusammenführung dieser Daten mit anderen Datenquellen wird nicht vorgenommen. Die Erfassung dieser Daten erfolgt auf Grundlage von Art. 6 Abs. 1 lit. f DSGVO.
+            </p>
+          </section>
 
-          <div class="datenschutz-block">
-            <h2>9. Deine Rechte</h2>
-            <p>Du hast Rechte auf Auskunft, Berichtigung, Löschung, Einschränkung, Datenübertragbarkeit sowie Widerspruch gegen Verarbeitungen auf Grundlage von Art. 6 Abs. 1 e/f DSGVO. Außerdem das Recht auf Beschwerde bei einer Datenschutz-Aufsichtsbehörde (Art. 15–21, 77 DSGVO).</p>
-            <p>Für Widerrufe von Einwilligungen nutze die Privatsphäre-Einstellungen oder schreibe an <a href="mailto:mboehm63@gmail.com" class="datenschutz-link">mboehm63@gmail.com</a>.</p>
-          </div>
+          <section class="legal-section">
+            <h2>4. Kontaktformular</h2>
+            <p>
+              Wenn Sie uns per Kontaktformular Anfragen zukommen lassen, werden Ihre Angaben aus dem Anfrageformular inklusive der von Ihnen dort angegebenen Kontaktdaten zwecks Bearbeitung der Anfrage und für den Fall von Anschlussfragen bei uns gespeichert. Diese Daten geben wir nicht ohne Ihre Einwilligung weiter.
+            </p>
+            <p>
+              Die Verarbeitung dieser Daten erfolgt auf Grundlage von Art. 6 Abs. 1 lit. b DSGVO, sofern Ihre Anfrage mit der Erfüllung eines Vertrags zusammenhängt oder zur Durchführung vorvertraglicher Maßnahmen erforderlich ist. In allen übrigen Fällen beruht die Verarbeitung auf unserem berechtigten Interesse an der effektiven Bearbeitung der an uns gerichteten Anfragen (Art. 6 Abs. 1 lit. f DSGVO).
+            </p>
+          </section>
 
-          <div class="datenschutz-block">
-            <h2>10. Auftragsverarbeitung</h2>
-            <p>Mit Dienstleistern (z. B. Hosting, E-Mail, Newsletter, Analytics, Zahlungsdienste, Support-Tools) schließen wir Verträge zur Auftragsverarbeitung (Art. 28 DSGVO).</p>
-          </div>
+          <section class="legal-section">
+            <h2>5. Externe Dienste</h2>
+            <h3>Apple Music, Spotify, SoundCloud</h3>
+            <p>
+              Unsere Website enthält Links zu externen Musikplattformen (Apple Music, Spotify, SoundCloud). Beim Klick auf diese Links werden Sie zu den jeweiligen Plattformen weitergeleitet. Für die Datenverarbeitung auf diesen Plattformen gelten deren eigene Datenschutzbestimmungen.
+            </p>
+          </section>
 
-          <div class="datenschutz-block">
-            <h2>11. Datenschutzbeauftragter</h2>
-            <p>Nach aktuellem Stand ist kein Datenschutzbeauftragter benannt. Eine Benennung ist nur erforderlich, wenn die gesetzlichen Voraussetzungen (Art. 37 DSGVO, § 38 BDSG) vorliegen.</p>
-          </div>
+          <section class="legal-section">
+            <h2>6. Ihre Rechte</h2>
+            <p>
+              Sie haben folgende Rechte bezüglich Ihrer personenbezogenen Daten:
+            </p>
+            <ul>
+              <li>Recht auf Auskunft (Art. 15 DSGVO)</li>
+              <li>Recht auf Berichtigung (Art. 16 DSGVO)</li>
+              <li>Recht auf Löschung (Art. 17 DSGVO)</li>
+              <li>Recht auf Einschränkung der Verarbeitung (Art. 18 DSGVO)</li>
+              <li>Recht auf Datenübertragbarkeit (Art. 20 DSGVO)</li>
+              <li>Widerspruchsrecht (Art. 21 DSGVO)</li>
+            </ul>
+            <p>
+              Zur Ausübung Ihrer Rechte wenden Sie sich bitte an: <a href="mailto:mboehm63@gmail.com">mboehm63@gmail.com</a>
+            </p>
+          </section>
 
-          <div class="datenschutz-block">
-            <h2>12. Sicherheit</h2>
-            <p>TLS-Verschlüsselung, Härtung von Server/Frameworks, Least-Privilege-Zugriffe, regelmäßige Updates/Backups.</p>
-          </div>
+          <section class="legal-section">
+            <h2>7. Beschwerderecht bei der Aufsichtsbehörde</h2>
+            <p>
+              Sie haben das Recht, sich bei einer Aufsichtsbehörde zu beschweren, wenn Sie der Ansicht sind, dass die Verarbeitung der Sie betreffenden personenbezogenen Daten gegen die DSGVO verstößt.
+            </p>
+          </section>
 
-          <div class="datenschutz-back">
-            <a href="/" class="btn-primary">← Zurück zur Hauptseite</a>
+          <div class="back-link">
+            <a href="/" class="btn-secondary">← Zurück zur Website</a>
           </div>
         </div>
       </div>
-    </section>
+    </main>
 
     <!-- Footer -->
     <footer class="footer glass-panel">
@@ -131,8 +141,8 @@
             <span>9Planets - Sound Beyond Gravity</span>
           </div>
           <div class="footer-links">
-            <a href="/impressum.html">Impressum</a>
-            <a href="/datenschutz.html">Datenschutz</a>
+            <a href="impressum.html">Impressum</a>
+            <a href="datenschutz.html">Datenschutz</a>
           </div>
         </div>
         <p class="footer-copyright">
@@ -143,132 +153,94 @@
   </div>
 
   <style>
-    .datenschutz-section {
-      padding: 120px 0 80px 0;
-      min-height: 100vh;
-      display: flex;
-      align-items: flex-start;
-      position: relative;
-      z-index: 2;
+    .legal-page {
+      margin-top: 100px;
+      padding: 40px 20px;
+      min-height: calc(100vh - 200px);
     }
 
-    .datenschutz-content {
-      padding: 3rem;
-      max-width: 900px;
-      margin: 0 auto;
-    }
-
-    .datenschutz-title {
-      font-size: 3rem;
-      font-weight: 700;
+    .legal-page h1 {
+      color: white;
+      font-size: 2.5rem;
+      margin-bottom: 10px;
       text-align: center;
-      margin-bottom: 1rem;
-      background: linear-gradient(135deg, #ffffff, #a78bfa);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
-      letter-spacing: 2px;
     }
 
-    .datenschutz-date {
-      text-align: center;
+    .legal-date {
       color: rgba(255, 255, 255, 0.7);
-      font-size: 1.1rem;
-      margin-bottom: 3rem;
-    }
-
-    .datenschutz-block {
-      margin-bottom: 2.5rem;
-      padding-bottom: 1.5rem;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-    }
-
-    .datenschutz-block:last-of-type {
-      border-bottom: none;
-      margin-bottom: 3rem;
-    }
-
-    .datenschutz-block h2 {
-      color: rgba(255, 255, 255, 0.95);
-      font-size: 1.4rem;
-      font-weight: 600;
-      margin-bottom: 1rem;
-      letter-spacing: 1px;
-    }
-
-    .datenschutz-block p {
-      color: rgba(255, 255, 255, 0.9);
-      font-size: 1.05rem;
-      line-height: 1.7;
-      margin-bottom: 1rem;
-    }
-
-    .datenschutz-block p:last-child {
-      margin-bottom: 0;
-    }
-
-    .datenschutz-list {
-      color: rgba(255, 255, 255, 0.9);
-      font-size: 1.05rem;
-      line-height: 1.7;
-      margin-left: 1.5rem;
-      margin-bottom: 1rem;
-    }
-
-    .datenschutz-list li {
-      margin-bottom: 0.5rem;
-    }
-
-    .datenschutz-link {
-      color: #a78bfa;
-      text-decoration: none;
-      transition: color 0.3s ease;
-    }
-
-    .datenschutz-link:hover {
-      color: #ffffff;
-    }
-
-    .datenschutz-back {
       text-align: center;
-      margin-top: 3rem;
-      padding-top: 2rem;
-      border-top: 1px solid rgba(255, 255, 255, 0.1);
+      margin-bottom: 40px;
+      font-style: italic;
     }
 
-    .btn-primary {
+    .legal-section {
+      margin-bottom: 30px;
+    }
+
+    .legal-section h2 {
+      color: white;
+      font-size: 1.4rem;
+      margin-bottom: 15px;
+      border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+      padding-bottom: 8px;
+    }
+
+    .legal-section h3 {
+      color: rgba(255, 255, 255, 0.9);
+      font-size: 1.2rem;
+      margin-bottom: 10px;
+      margin-top: 20px;
+    }
+
+    .legal-section p {
+      color: rgba(255, 255, 255, 0.9);
+      line-height: 1.6;
+      margin-bottom: 15px;
+    }
+
+    .legal-section ul {
+      color: rgba(255, 255, 255, 0.9);
+      line-height: 1.6;
+      margin-bottom: 15px;
+      padding-left: 20px;
+    }
+
+    .legal-section li {
+      margin-bottom: 5px;
+    }
+
+    .legal-section a {
+      color: #64B5F6;
+      text-decoration: none;
+    }
+
+    .legal-section a:hover {
+      text-decoration: underline;
+    }
+
+    .back-link {
+      text-align: center;
+      margin-top: 40px;
+      padding-top: 30px;
+      border-top: 1px solid rgba(255, 255, 255, 0.2);
+    }
+
+    .btn-secondary {
       display: inline-block;
-      padding: 12px 32px;
-      background: #6366f1;
+      padding: 12px 24px;
+      background: rgba(255, 255, 255, 0.1);
       color: white;
       text-decoration: none;
-      border-radius: 50px;
-      font-weight: 600;
+      border-radius: 25px;
+      border: 1px solid rgba(255, 255, 255, 0.2);
       transition: all 0.3s ease;
-      border: none;
-      cursor: pointer;
+      backdrop-filter: blur(10px);
     }
 
-    .btn-primary:hover {
-      background: #5855eb;
+    .btn-secondary:hover {
+      background: rgba(255, 255, 255, 0.2);
       transform: translateY(-2px);
     }
-
-    @media (max-width: 768px) {
-      .datenschutz-content {
-        padding: 2rem;
-      }
-
-      .datenschutz-title {
-        font-size: 2.5rem;
-      }
-
-      .datenschutz-section {
-        padding: 100px 0 60px 0;
-      }
-    }
   </style>
-
-  <script type="module" src="/src/main.js"></script>
 </body>
 </html>
