Impressum und Datenschutz mit korrigierten Abständen

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -44,85 +44,108 @@
           <section class="legal-section">
             <h2>1. Verantwortlicher</h2>
             <p>
-              Verantwortlicher für die Datenverarbeitung auf dieser Website ist:<br><br>
-              Michael H. Boehm<br>
-              9Planets – Independent Music Label<br>
-              Im Vogelgesang 43<br>
-              67346 Speyer, Deutschland<br>
-              E-Mail: <a href="mailto:mboehm63@gmail.com">mboehm63@gmail.com</a>
+              9Planets – Independent Music Label (freischaffender Künstler (Freiberufler))<br>
+              Vertretungsberechtigt: Michael H. Boehm<br>
+              Im Vogelgesang 43, 67346 Speyer, Deutschland<br>
+              E-Mail: <a href="mailto:mboehm63@gmail.com">mboehm63@gmail.com</a><br>
+              (Art. 13 DSGVO)
             </p>
           </section>
 
           <section class="legal-section">
-            <h2>2. Allgemeine Hinweise und Pflichtinformationen</h2>
-            <h3>Datenschutz</h3>
+            <h2>2. Zwecke, Datenkategorien, Rechtsgrundlagen (Kurzüberblick)</h2>
             <p>
-              Die Betreiber dieser Seiten nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Wir behandeln Ihre personenbezogenen Daten vertraulich und entsprechend den gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung.
+              <strong>Webseitenbetrieb & Sicherheit</strong> (Server-Logs: IP-Adresse, Zeitstempel, URL, Referrer, User-Agent) → Art. 6 Abs. 1 f DSGVO (berechtigtes Interesse an stabiler, sicherer Bereitstellung).
             </p>
             <p>
-              Wenn Sie diese Website benutzen, werden verschiedene personenbezogene Daten erhoben. Personenbezogene Daten sind Daten, mit denen Sie persönlich identifiziert werden können. Die vorliegende Datenschutzerklärung erläutert, welche Daten wir erheben und wofür wir sie nutzen.
+              <strong>Kommunikation</strong> (E-Mails/Formulare: Absenderdaten, Inhalte) → Art. 6 Abs. 1 b DSGVO (Vertrag/Anbahnung) oder Art. 6 Abs. 1 f DSGVO.
+            </p>
+            <p>
+              <strong>Einwilligungspflichtige Technologien</strong> (z. B. Analytics, Marketing-Tags, Medien-Embeds) → § 25 Abs. 1 TDDDG (Zugriff/Speicherung auf dem Endgerät) + Art. 6 Abs. 1 a DSGVO (Verarbeitung).
+            </p>
+            <p>
+              <strong>Technisch notwendige Cookies</strong> → § 25 Abs. 2 TDDDG (keine Einwilligung erforderlich).
             </p>
           </section>
 
           <section class="legal-section">
-            <h2>3. Datenerfassung auf dieser Website</h2>
-            <h3>Server-Log-Dateien</h3>
+            <h2>3. Hosting / Content Delivery</h2>
             <p>
-              Der Provider der Seiten erhebt und speichert automatisch Informationen in so genannten Server-Log-Dateien, die Ihr Browser automatisch an uns übermittelt. Dies sind:
+              Wir hosten diese Website bei Netlify (Sitzland: USA). Beim Aufruf fallen Verbindungsdaten (s. o.) an, die zur Abwehr von Angriffen und zur Sicherstellung des Betriebs kurzfristig in Logfiles gespeichert werden → Art. 6 Abs. 1 f DSGVO.
+            </p>
+            <p>
+              <strong>Drittlandübermittlung:</strong> Bei Anbietern außerhalb der EU/EWR erfolgt die Übermittlung auf Basis eines Angemessenheitsbeschlusses (z. B. EU-US Data Privacy Framework) oder Standardvertragsklauseln (SCCs), sofern kein DPF-Beitritt besteht.
+            </p>
+          </section>
+
+          <section class="legal-section">
+            <h2>4. Einwilligungen / Consent-Management</h2>
+            <p>
+              Nicht-essentielle Dienste laden wir erst nach deiner Einwilligung. Du kannst deine Entscheidung jederzeit widerrufen. Rechtsgrundlagen: § 25 TDDDG (Endgerät) und Art. 6 Abs. 1 a DSGVO (Verarbeitung).
+            </p>
+          </section>
+
+          <section class="legal-section">
+            <h2>5. Kontaktaufnahme</h2>
+            <p>
+              Bei Kontakt per E-Mail/Formular verarbeiten wir die Angaben zur Bearbeitung und Anschlussfragen. Löschung mit Erledigung, sofern keine Aufbewahrungspflichten entgegenstehen → Art. 6 Abs. 1 b/f DSGVO.
+            </p>
+          </section>
+
+          <section class="legal-section">
+            <h2>6. Eingebettete Inhalte (YouTube/Spotify/SoundCloud/Bandcamp)</h2>
+            <p>
+              Zum Schutz deiner Daten nutzen wir eine 2-Klick-Lösung. Erst nach aktiver Freigabe werden Inhalte geladen; dabei können Anbieter Cookies/IDs setzen und personenbezogene Daten (inkl. IP-Adresse) verarbeiten → § 25 TDDDG / Art. 6 Abs. 1 a DSGVO.
+            </p>
+          </section>
+
+          <section class="legal-section">
+            <h2>7. Schriftarten (Fonts)</h2>
+            <p>
+              Schriften werden lokal eingebunden. Es findet kein Abruf von Drittservern (z. B. Google) statt.
+            </p>
+          </section>
+
+          <section class="legal-section">
+            <h2>8. Speicherdauer</h2>
+            <p>
+              Wir löschen personenbezogene Daten, sobald der Zweck entfällt und keine gesetzlichen Pflichten entgegenstehen. Typische Fristen:
             </p>
             <ul>
-              <li>Browsertyp und Browserversion</li>
-              <li>verwendetes Betriebssystem</li>
-              <li>Referrer URL</li>
-              <li>Hostname des zugreifenden Rechners</li>
-              <li>Uhrzeit der Serveranfrage</li>
-              <li>IP-Adresse</li>
+              <li>Server-Logs: 7–14 Tage (Sicherheitszwecke)</li>
+              <li>Kontaktanfragen: 6–12 Monate</li>
+              <li>Einwilligungsprotokolle: 24 Monate (Nachweis der Einwilligung)</li>
             </ul>
+          </section>
+
+          <section class="legal-section">
+            <h2>9. Deine Rechte</h2>
             <p>
-              Eine Zusammenführung dieser Daten mit anderen Datenquellen wird nicht vorgenommen. Die Erfassung dieser Daten erfolgt auf Grundlage von Art. 6 Abs. 1 lit. f DSGVO.
+              Du hast Rechte auf Auskunft, Berichtigung, Löschung, Einschränkung, Datenübertragbarkeit sowie Widerspruch gegen Verarbeitungen auf Grundlage von Art. 6 Abs. 1 e/f DSGVO. Außerdem das Recht auf Beschwerde bei einer Datenschutz-Aufsichtsbehörde (Art. 15–21, 77 DSGVO).
+            </p>
+            <p>
+              Für Widerrufe von Einwilligungen oder andere Anfragen schreibe an: <a href="mailto:mboehm63@gmail.com">mboehm63@gmail.com</a>
             </p>
           </section>
 
           <section class="legal-section">
-            <h2>4. Kontaktformular</h2>
+            <h2>10. Auftragsverarbeitung</h2>
             <p>
-              Wenn Sie uns per Kontaktformular Anfragen zukommen lassen, werden Ihre Angaben aus dem Anfrageformular inklusive der von Ihnen dort angegebenen Kontaktdaten zwecks Bearbeitung der Anfrage und für den Fall von Anschlussfragen bei uns gespeichert. Diese Daten geben wir nicht ohne Ihre Einwilligung weiter.
-            </p>
-            <p>
-              Die Verarbeitung dieser Daten erfolgt auf Grundlage von Art. 6 Abs. 1 lit. b DSGVO, sofern Ihre Anfrage mit der Erfüllung eines Vertrags zusammenhängt oder zur Durchführung vorvertraglicher Maßnahmen erforderlich ist. In allen übrigen Fällen beruht die Verarbeitung auf unserem berechtigten Interesse an der effektiven Bearbeitung der an uns gerichteten Anfragen (Art. 6 Abs. 1 lit. f DSGVO).
+              Mit Dienstleistern (z. B. Hosting, E-Mail, Newsletter, Analytics, Zahlungsdienste, Support-Tools) schließen wir Verträge zur Auftragsverarbeitung (Art. 28 DSGVO).
             </p>
           </section>
 
           <section class="legal-section">
-            <h2>5. Externe Dienste</h2>
-            <h3>Apple Music, Spotify, SoundCloud</h3>
+            <h2>11. Datenschutzbeauftragter</h2>
             <p>
-              Unsere Website enthält Links zu externen Musikplattformen (Apple Music, Spotify, SoundCloud). Beim Klick auf diese Links werden Sie zu den jeweiligen Plattformen weitergeleitet. Für die Datenverarbeitung auf diesen Plattformen gelten deren eigene Datenschutzbestimmungen.
+              Nach aktuellem Stand ist kein Datenschutzbeauftragter benannt. Eine Benennung ist nur erforderlich, wenn die gesetzlichen Voraussetzungen (Art. 37 DSGVO, § 38 BDSG) vorliegen.
             </p>
           </section>
 
           <section class="legal-section">
-            <h2>6. Ihre Rechte</h2>
+            <h2>12. Sicherheit</h2>
             <p>
-              Sie haben folgende Rechte bezüglich Ihrer personenbezogenen Daten:
-            </p>
-            <ul>
-              <li>Recht auf Auskunft (Art. 15 DSGVO)</li>
-              <li>Recht auf Berichtigung (Art. 16 DSGVO)</li>
-              <li>Recht auf Löschung (Art. 17 DSGVO)</li>
-              <li>Recht auf Einschränkung der Verarbeitung (Art. 18 DSGVO)</li>
-              <li>Recht auf Datenübertragbarkeit (Art. 20 DSGVO)</li>
-              <li>Widerspruchsrecht (Art. 21 DSGVO)</li>
-            </ul>
-            <p>
-              Zur Ausübung Ihrer Rechte wenden Sie sich bitte an: <a href="mailto:mboehm63@gmail.com">mboehm63@gmail.com</a>
-            </p>
-          </section>
-
-          <section class="legal-section">
-            <h2>7. Beschwerderecht bei der Aufsichtsbehörde</h2>
-            <p>
-              Sie haben das Recht, sich bei einer Aufsichtsbehörde zu beschweren, wenn Sie der Ansicht sind, dass die Verarbeitung der Sie betreffenden personenbezogenen Daten gegen die DSGVO verstößt.
+              TLS-Verschlüsselung, Härtung von Server/Frameworks, Least-Privilege-Zugriffe, regelmäßige Updates/Backups.
             </p>
           </section>
 
@@ -174,7 +197,7 @@
     }
 
     .legal-section {
-      margin-bottom: 30px;
+      margin-bottom: 15px;
     }
 
     .legal-section h2 {
