--- a/impressum.html
+++ b/impressum.html
@@ -35,36 +35,36 @@
     </nav>
 
     <!-- Main Content -->
-    <main class="legal-page">
+    <main style="margin-top: 100px; padding: 20px; min-height: calc(100vh - 200px);">
       <div class="container">
         <div class="glass-panel">
-          <h1>Impressum</h1>
-          <p class="legal-date">(Stand: 19.09.2025)</p>
+          <h1 style="color: white; font-size: 2.5rem; margin-bottom: 5px !important; text-align: center;">Impressum</h1>
+          <p style="color: rgba(255, 255, 255, 0.7); text-align: center; margin-bottom: 15px !important; font-style: italic;">(Stand: 19.09.2025)</p>
           
-          <section class="legal-section">
-            <h2>Anbieter und Verantwortlicher (§ 5 DDG)</h2>
-            <p>
+          <div style="margin-bottom: 3px !important;">
+            <h2 style="color: white; font-size: 1.3rem; margin-bottom: 3px !important; margin-top: 8px !important; border-bottom: 1px solid rgba(255, 255, 255, 0.2); padding-bottom: 2px;">Anbieter und Verantwortlicher (§ 5 DDG)</h2>
+            <p style="color: rgba(255, 255, 255, 0.9); line-height: 1.3 !important; margin-bottom: 3px !important; margin-top: 0 !important;">
               Michael H. Boehm, tätig als freischaffender Künstler (Freiberufler)<br>
               auftretend unter: „9Planets – Independent Music Label" (Marke/Projekt)<br>
               Im Vogelgesang 43, 67346 Speyer, Deutschland<br>
-              E-Mail: <a href="mailto:mboehm63@gmail.com">mboehm63@gmail.com</a>
+              E-Mail: <a href="mailto:mboehm63@gmail.com" style="color: #64B5F6; text-decoration: none;">mboehm63@gmail.com</a>
             </p>
-          </section>
+          </div>
 
-          <section class="legal-section">
-            <h2>Verbraucherstreitbeilegung (§ 36 VSBG)</h2>
-            <p>
+          <div style="margin-bottom: 3px !important;">
+            <h2 style="color: white; font-size: 1.3rem; margin-bottom: 3px !important; margin-top: 8px !important; border-bottom: 1px solid rgba(255, 255, 255, 0.2); padding-bottom: 2px;">Verbraucherstreitbeilegung (§ 36 VSBG)</h2>
+            <p style="color: rgba(255, 255, 255, 0.9); line-height: 1.3 !important; margin-bottom: 3px !important; margin-top: 0 !important;">
               Wir sind nicht bereit und nicht verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.
             </p>
-          </section>
+          </div>
 
-          <section class="legal-section">
-            <h2>GVL-Labelcode</h2>
-            <p>LC 103453</p>
-          </section>
+          <div style="margin-bottom: 3px !important;">
+            <h2 style="color: white; font-size: 1.3rem; margin-bottom: 3px !important; margin-top: 8px !important; border-bottom: 1px solid rgba(255, 255, 255, 0.2); padding-bottom: 2px;">GVL-Labelcode</h2>
+            <p style="color: rgba(255, 255, 255, 0.9); line-height: 1.3 !important; margin-bottom: 3px !important; margin-top: 0 !important;">LC 103453</p>
+          </div>
 
-          <div class="back-link">
-            <a href="/" class="btn-secondary">← Zurück zur Website</a>
+          <div style="text-align: center; margin-top: 15px !important; padding-top: 10px; border-top: 1px solid rgba(255, 255, 255, 0.2);">
+            <a href="/" style="display: inline-block; padding: 12px 24px; background: rgba(255, 255, 255, 0.1); color: white; text-decoration: none; border-radius: 25px; border: 1px solid rgba(255, 255, 255, 0.2); backdrop-filter: blur(10px);">← Zurück zur Website</a>
           </div>
         </div>
       </div>
@@ -88,78 +88,5 @@
       </div>
     </footer>
   </div>
-
-  <style>
-    .legal-page {
-      margin-top: 100px;
-      padding: 40px 20px;
-      min-height: calc(100vh - 200px);
-    }
-
-    .legal-page h1 {
-      color: white;
-      font-size: 2.5rem;
-      margin-bottom: 10px;
-      text-align: center;
-    }
-
-    .legal-date {
-      color: rgba(255, 255, 255, 0.7);
-      text-align: center;
-      margin-bottom: 40px;
-      font-style: italic;
-    }
-
-    .legal-section {
-      margin-bottom: 8px;
-    }
-
-    .legal-section h2 {
-      color: white;
-      font-size: 1.4rem;
-      margin-bottom: 8px;
-      border-bottom: 2px solid rgba(255, 255, 255, 0.2);
-      padding-bottom: 4px;
-    }
-
-    .legal-section p {
-      color: rgba(255, 255, 255, 0.9);
-      line-height: 1.4;
-      margin-bottom: 8px;
-    }
-
-    .legal-section a {
-      color: #64B5F6;
-      text-decoration: none;
-    }
-
-    .legal-section a:hover {
-      text-decoration: underline;
-    }
-
-    .back-link {
-      text-align: center;
-      margin-top: 40px;
-      padding-top: 30px;
-      border-top: 1px solid rgba(255, 255, 255, 0.2);
-    }
-
-    .btn-secondary {
-      display: inline-block;
-      padding: 12px 24px;
-      background: rgba(255, 255, 255, 0.1);
-      color: white;
-      text-decoration: none;
-      border-radius: 25px;
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      transition: all 0.3s ease;
-      backdrop-filter: blur(10px);
-    }
-
-    .btn-secondary:hover {
-      background: rgba(255, 255, 255, 0.2);
-      transform: translateY(-2px);
-    }
-  </style>
 </body>
 </html>
