Logo Cutout-Effekt implementiert

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section id="home" class="hero-section">
       <div class="hero-content glass-panel">
         <div class="hero-logo-container">
-          <img src="/src/assets/images/logo.png" alt="9Planets Logo" class="hero-logo">
+          <div class="logo-cutout"></div>
         </div>
         <p class="hero-subtitle" data-i18n="hero.subtitle" style="color: white !important; text-transform: uppercase !important; font-weight: 600 !important; letter-spacing: 2px !important;">SOUND BEYOND GRAVITY</p>
         <p class="hero-description" data-i18n="hero.description">
@@ -201,8 +201,8 @@
             <span>9Planets - Sound Beyond Gravity</span>
           </div>
           <div class="footer-links">
-            <a href="impressum.html" data-i18n="footer.imprint">Impressum</a>
-            <a href="datenschutz.html" data-i18n="footer.privacy">Datenschutz</a>
+            <a href="/impressum.html" data-i18n="footer.imprint">Impressum</a>
+            <a href="/datenschutz.html" data-i18n="footer.privacy">Datenschutz</a>
           </div>
         </div>
         <p class="footer-copyright">
