--- a/index.html
+++ b/index.html
@@ -44,17 +44,9 @@
     <section id="home" class="hero-section">
       <div class="hero-content glass-panel">
         <div class="hero-logo-container">
-          <svg width="300" height="200" viewBox="0 0 300 200">
-            <defs>
-              <mask id="logoMask">
-                <rect width="100%" height="100%" fill="black"/>
-                <image href="/src/assets/images/logo.png" x="0" y="0" width="300" height="200" style="mix-blend-mode: screen;"/>
-              </mask>
-            </defs>
-            <foreignObject width="100%" height="100%" mask="url(#logoMask)">
-              <div style="width: 100%; height: 100%; background: rgba(255,255,255,0.2); backdrop-filter: blur(10px);"></div>
-            </foreignObject>
-          </svg>
+          <div class="video-cutout">
+            <img src="/src/assets/images/logo.png" alt="9Planets Logo" class="logo-mask">
+          </div>
         </div>
         <p class="hero-subtitle" data-i18n="hero.subtitle" style="color: white !important; text-transform: uppercase !important; font-weight: 600 !important; letter-spacing: 2px !important;">SOUND BEYOND GRAVITY</p>
         <p class="hero-description" data-i18n="hero.description">
