Eleganter Glaseffekt mit Logo

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <section id="home" class="hero-section">
       <div class="hero-content glass-panel">
         <div class="hero-logo-container">
-          <div class="video-cutout">
-            <img src="/src/assets/images/logo.png" alt="9Planets Logo" class="logo-mask">
+          <div class="glass-logo-panel">
+            <img src="/src/assets/images/logo.png" alt="9Planets Logo" class="hero-logo">
           </div>
         </div>
         <p class="hero-subtitle" data-i18n="hero.subtitle" style="color: white !important; text-transform: uppercase !important; font-weight: 600 !important; letter-spacing: 2px !important;">SOUND BEYOND GRAVITY</p>
